--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         }
     ],
     "require": {
-        "php": "^7.3 || ^8.0",
+        "php": "^7.4 || ^8.0",
         "doctrine/common": "^2.12 || ^3.0",
         "doctrine/doctrine-bundle": "^2.1",
         "doctrine/orm": "^2.7",
@@ -35,8 +35,8 @@
         "matthiasnoback/symfony-dependency-injection-test": "^4.1",
         "phpunit/phpunit": "^9.3",
         "runroom-packages/testing": "^0.10",
-        "sonata-project/admin-bundle": "^3.68",
-        "sonata-project/doctrine-orm-admin-bundle": "^3.20",
+        "sonata-project/admin-bundle": "^3.100 || ^4.0",
+        "sonata-project/doctrine-orm-admin-bundle": "^3.34 || ^4.0",
         "symfony/phpunit-bridge": "^5.1"
     },
     "suggest": {
