--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "doctrine/dbal": "^3.6 || ^4.0",
         "doctrine/doctrine-bundle": "^2.10",
         "doctrine/orm": "^2.19 || ^3.2",
-        "doctrine/persistence": "^3.1",
+        "doctrine/persistence": "^3.1 || ^4.0",
         "symfony/config": "^6.4 || ^7.1",
         "symfony/dependency-injection": "^6.4 || ^7.1",
         "symfony/http-foundation": "^6.4 || ^7.1",
@@ -34,17 +34,17 @@
         "dama/doctrine-test-bundle": "^8.0",
         "gedmo/doctrine-extensions": "^3.11",
         "knplabs/knp-menu-bundle": "^3.1",
-        "matthiasnoback/symfony-config-test": "^5.1",
-        "matthiasnoback/symfony-dependency-injection-test": "^5.1",
-        "phpunit/phpunit": "^9.6",
+        "matthiasnoback/symfony-config-test": "^6.1",
+        "matthiasnoback/symfony-dependency-injection-test": "^6.1",
+        "phpunit/phpunit": "^10.5",
         "psr/container": "^1.1 || ^2.0",
-        "runroom-packages/testing": "^0.20",
+        "runroom-packages/testing": "^0.21",
         "sonata-project/admin-bundle": "^4.25",
         "sonata-project/doctrine-orm-admin-bundle": "^4.13",
         "symfony/browser-kit": "^6.4 || ^7.1",
         "symfony/framework-bundle": "^6.4 || ^7.1",
-        "symfony/phpunit-bridge": "^7.1",
         "symfony/security-bundle": "^6.4 || ^7.1",
+        "symfony/stimulus-bundle": "^2.30",
         "symfony/twig-bundle": "^6.4 || ^7.1",
         "zenstruck/foundry": "^2.0"
     },
@@ -73,7 +73,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "0.20-dev"
+            "dev-master": "0.21-dev"
         }
     }
 }
